--- a/index.html
+++ b/index.html
@@ -33,10 +33,14 @@
     <!--Body-->
   <body>
     <section>
-      <div>test</div>
-
-      <div>test 2</div>
-      <div>test 3</div>
+      <div>
+        <h2>Psychic Game</h2>
+        <p>Guess what letter I'm thinking of</p>
+        <p>Win:</p>
+        <p>Losses:</p>
+        <p>Guesses Left:</p>
+        <p>Your Guesses so far:</p>      
+      </div>
     </section>
   </body>
 </html>
