--- a/index.html
+++ b/index.html
@@ -27,19 +27,21 @@
       crossorigin="anonymous"
     />
     <!-- Javascript -->
-    <script src="javascript/game.js"></script>
+    <script src="assets/javascript/game.js"></script>
   </head>
 
     <!--Body-->
   <body>
     <section>
-      <div>
+      <div> 
         <h2>Psychic Game</h2>
+        <br>
         <p>Guess what letter I'm thinking of</p>
-        <p>Win:</p>
-        <p>Losses:</p>
-        <p>Guesses Left:</p>
-        <p>Your Guesses so far:</p>      
+        <!--Used span to style javascript output only; not the entire <p> tag-->
+        <p>Wins: <span id= "numberOfWins" style="font-weight: bold; color: green"></span></p> 
+        <p>Losses: <span id="numberOfLosses" style="font-weight: bold; color: red"></span></p>
+        <p>Guesses Left: <span id="numberOfGuessesLeft" style="font-weight: bold; color: blue"></span></p>
+        <p>Your Guesses so far:<span id="userGuesses" style="font-weight: bold; color: orange"></span></p>      
       </div>
     </section>
   </body>
