--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <p>Guess what letter I'm thinking of</p>
         <!--Used span to style javascript output only; not the entire <p> tag-->
         <p>Wins: <span id= "numberOfWins" style="font-weight: bold; color: green"></span></p> 
+        <p>Winning Letters: <span id= "winningLetters" style="font-weight: bold; color: lightgreen"></span></p>
         <p>Losses: <span id="numberOfLosses" style="font-weight: bold; color: red"></span></p>
         <p>Guesses Left: <span id="numberOfGuessesLeft" style="font-weight: bold; color: blue"></span></p>
         <p>Your Guesses so far:<span id="userGuesses" style="font-weight: bold; color: orange"></span></p>      
